k8s/security/netsec/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: webbis
---
apiVersion: v1
kind: Namespace
metadata:
  name: curling
  labels:
    kubernetes.io/metadata.name: curling
