k8s/security/netsec/allow-cronjob.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cronjob
  namespace: webbis
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: curling
      podSelector:
        matchLabels:
          app: curl-cronjob
