k8s/security/netsec/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: webbis
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
